--- a/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
+++ b/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
@@ -17,7 +17,7 @@
                  Dense=true
                  ShowProgressIndicator=true
                  ToStringFunc="item=>item?.CanonicalName"
-                 AdornmentColor="Color.Secondary"
+                 AdornmentColor="Color.Tertiary"
                  ProgressIndicatorColor="Color.Secondary"
                  Adornment="Adornment.Start"
                  AdornmentIcon="@AdornmentIcon"
