--- a/BLAZAMGui/UI/Settings/SystemSettings.razor
+++ b/BLAZAMGui/UI/Settings/SystemSettings.razor
@@ -16,7 +16,7 @@
 
         </SettingsField>
     }
-
+    <MudText>Log Directory: @Loggers.LogPath</MudText>
     <SettingsField>
 
         <MudLink Href="/download/logs" Target="Target.Blank">
