Fix for login auth error snackbar message

--- a/BLAZAMGui/UI/Settings/UpdateSettings.razor
+++ b/BLAZAMGui/UI/Settings/UpdateSettings.razor
@@ -20,19 +20,19 @@
                 <MudText>Using custom update credentials.</MudText>
 
 
-                <SettingsField Label="@AppLocalization["Update Domain"]">
+                <SettingsField Label="@AppLocalization["Domain"]">
 
-                    <MudTextField Label="@AppLocalization["Update Domain"]" @bind-Value="settings.UpdateDomain" />
+                    <MudTextField Label="@AppLocalization["Domain"]" @bind-Value="settings.UpdateDomain" />
                 </SettingsField>
 
-                <SettingsField Label="@AppLocalization["Update Username"]">
+                <SettingsField Label="@AppLocalization["Username"]">
 
-                    <MudTextField Label="@AppLocalization["Update Username"]" @bind-Value="settings.UpdateUsername" />
+                    <MudTextField Label="@AppLocalization["Username"]" @bind-Value="settings.UpdateUsername" />
                 </SettingsField>
 
-                <SettingsField Label="@AppLocalization["Update Password"]">
+                <SettingsField Label="@AppLocalization["Password"]">
 
-                    <MudTextField Label="@AppLocalization["Update Password"]" InputType="InputType.Password" @bind-Value="newUpdatePassword" />
+                    <MudTextField Label="@AppLocalization["Password"]" InputType="InputType.Password" @bind-Value="newUpdatePassword" />
                 </SettingsField>
             }
 
