--- a/BLAZAMGui/UI/Settings/SettingsField.razor
+++ b/BLAZAMGui/UI/Settings/SettingsField.razor
@@ -4,7 +4,7 @@
             @if(FieldLabel==null && !Label.IsNullOrEmpty())
             {
 
-                <MudText Color=Color.Default Style="margin-bottom:4px;">
+                <MudText Class="d-none d-sm-block" Color=Color.Default Style="margin-bottom:4px;">
                     @Label
                 </MudText>
             }
